feat: add swagger documentation for multi query value
